Agrego boton de ver mas a las tarjetas de nuevo y ademas arreglo el diseño de las imágenes de las tarjetas

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,6 +67,13 @@ header {
   border-radius: 50%;
 }
 
+#nuevo .card {
+  & img {
+    height: 200px;
+    object-fit: cover;
+  }
+}
+
 .btn-up {
   position: fixed;
   bottom: 10px;
