--- a/css/estilos.css
+++ b/css/estilos.css
@@ -72,3 +72,9 @@ header {
   bottom: 10px;
   right: 10px;
 }
+
+@media (min-width: 768px) {
+  #contacto form textarea {
+    height: 200px;
+  }
+}
